Upadted Projects with Their Content | Added new projects

--- a/BrainBank.html
+++ b/BrainBank.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fellowship App Details</title>
+  <title>PPocket App Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,6 +59,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -93,11 +94,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/FellowshipApp.jpg" alt="">
+                  <img src="assets/img/portfolio/BrainBankFeatureGraphics.png" alt="">
                 </div>
-
-              
-
 
               </div>
               <div class="swiper-pagination"></div>
@@ -108,11 +106,56 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Platform</strong>: Flutter App & Web Application</li>
+                <li><strong>Name</strong>: Brain Bank </li>
+                <li><strong>Platforms</strong>: Android | iOS | Web </li>
+                <li><strong>Technologies</strong>:<ul>
+                    <li>Flutter</li>
+                    <li>Dart</li>
+                    <li>Firebase</li>
+                    <li>REST APIs</li>
+                    <li>VoIP</li>
+                    <li>Video Calling</li>
+                    <li>Firebase Cloud Messaging</li>
+                    <li>Stripe Payment Gateway</li>
+                    <li>CI/CD</li>
+                    <li>Cloud Functions</li>
+                  </ul>
+                </li>
+
+
+
               </ul>
             </div>
-            <!-- <div class="portfolio-description">
-             
+            <div class="portfolio-description">
+              <h2>Brain Bank: Connects you with experts for knowledge and guidance on any topic.</h2>
+              <p>
+                <br>An all-in-one platform connecting users with experts for knowledge and guidance on any topic.
+                <br>
+              <h4>Key features: </h4>
+              <ul>
+                <li>Explore a vast library of topics and connect with qualified experts for personalized consultations.
+                </li>
+                <li>Seamlessly manage bookings, ensuring secure payments, and leave ratings and reviews to enhance user
+                  experiences.</li>
+                <li>Experts can create professional profiles, manage topics, and set competitive rates and availability.
+                </li>
+                <li>Foster a user-friendly and secure environment for meaningful knowledge exchange.</li>
+                <li>Sellers gain valuable insights through comprehensive statistics, tracking booking completion rates,
+                  and total earnings.</li>
+                <li>Discover experts effortlessly by browsing topics or searching for specific topics, enhancing user
+                  experience.</li>
+                <li>Efficiently manage bookings with features such as viewing all pending, completed, and canceled
+                  bookings.</li>
+                <li>Interact with experts through features like viewing their availability, rates, and duration of
+                  meetings.</li>
+                <li>Enable seamless communication between users and experts with in-app calling functionality.</li>
+                <li>Enhance payment management with options to save card details for future bookings and view all saved
+                  cards.</li>
+              </ul>
+
+
+            </div>
+
           </div>
 
         </div>
