--- a/EmergencyAppDetails.html
+++ b/EmergencyAppDetails.html
@@ -108,18 +108,31 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App & Web Application/li>
-                <li><strong>Client</strong>: Freelancing (FYP)</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/public-emergency-app">https://github.com/ahmaddioxide/public-emergency-app</a></li>
+                <li><strong>Category</strong>: Android | Web Application</li>
+                <li><Strong>Technologies</Strong>: 
+                <ul>
+                  <li>Flutter</li>
+                  <li>Firebase</li>
+                  <li>Google Maps API</li>
+                  <li>Android Studio</li>
+                </ul>
+                </li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Emergency Response Mobile Application</h2>
               <p>
-                <br>This is a cross-platform mobile application designed to provide assistance in emergencies. 
-                The app incorporates specialized features for different user groups such as firefighters, ambulance personnel, police officers, and general users.
-                It leverages the power of Flutter, Firebase, and Google Maps API to deliver accurate and real-time information to both users and responders.
-            </div>
+                This is a cross-platform mobile application designed to provide assistance in emergencies. The app incorporates specialized features for different user groups such as firefighters, ambulance personnel, police officers, and general users. It leverages the power of Flutter, Firebase, and Google Maps API to deliver accurate and real-time information to both users and responders.
+              </p>
+              
+              <h4>Key Features:</h4>
+              <ul>
+                <li>Specialized features for different user groups, including firefighters, ambulance personnel, police officers, and general users.</li>
+                <li>Utilizes Flutter framework for cross-platform compatibility.</li>
+                <li>Integrates Firebase for backend services such as user authentication, data storage, and real-time communication.</li>
+                <li>Utilizes Google Maps API for accurate and real-time location information.</li>
+              </ul>
+              
           </div>
 
         </div>
