--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -113,20 +113,35 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App</li>
-                <li><strong>Client</strong>: Personal Project</li>
+                <li><strong>Platform</strong>: Android </li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/GroupTea">https://github.com/ahmaddioxide/GroupTea</a></li>
+                <li><strong>
+                    Technologies Used
+                  </strong>
+                  <ul>
+                    <li>Flutter</li>
+                    <li>Firebase Authentication</li>
+                    <li>Firebase Firestore</li>
+                </strong></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Community Chat App</h2>
               <p>
-                Group Tea is a cross-platform community chatting app developed using Flutter. It enables users to chat
-                in groups and exchange messages, images and videos with each other. Firebase Authentication was used for
-                user registration and Firebase Firestore was utilized as the backend database to store user and group
-                details. The app is designed with an intuitive user interface and supports real-time messaging. Group
-                Tea is a personal project that was completed in August 2022, showcasing the developer's proficiency in
-                Flutter and mobile app development.
+                Group Tea is a cross-platform community chatting app developed using Flutter. 
+                It enables users to chat in groups and exchange messages, images, and videos with each other. Firebase Authentication was used for user registration and Firebase Firestore was utilized as the backend database to store user and group details. 
+                The app is designed with an intuitive user interface and supports real-time messaging.
+              </p>
+              
+              <h4>Key Features:</h4>
+              <ul>
+                <li>Enables users to chat in groups and exchange messages, images, and videos.</li>
+                <li>Uses Firebase Authentication for user registration.</li>
+                <li>Utilizes Firebase Firestore as the backend database to store user and group details.</li>
+                <li>Designed with an intuitive user interface.</li>
+                <li>Supports real-time messaging for instant communication.</li>
+              </ul>
+              
             </div>
 
           </div>
