--- a/PPocket.html
+++ b/PPocket.html
@@ -114,29 +114,54 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App & Desktop Application (integration)</li>
-                <li><strong>Client</strong>: My Final Year Project</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li> -->
+                <li><strong>Platforms</strong>: Android | iOS | Web | Integration for POS Systems</li>
+                <li>
+                  <string>Technologies</string>:
+                  <br>
+                  <ul>
+                    <li>Flutter</li>
+                    <li>Dart</li>
+                    <li>C++</li>
+                    <li>Firebase</li>
+                    <li>Digital Image Processing</li>
+                  </ul>
+
+                </li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>EcoReceipts: Your Sustainable Receipt and Budget Manager</h2>
+
               <p>
-                <br>This project is about creating a sustainable solution that eliminates the need for paper receipts by
-                generating Quick Response (QR) codes for invoices/receipts, which users can scan using a mobile app. The
-                app also offers budget management features that allow users to track their expenses and spending habits.
+                EcoReceipts is a project aimed at creating a sustainable solution that eliminates the need for paper
+                receipts by generating Quick Response (QR) codes for invoices/receipts. Users can simply scan these QR
+                codes using a mobile app, thus reducing paper waste.
+              </p>
 
-                <br><br>With this system, users can scan the QR code and store the bill's details in the app, allowing
-                them to view their receipts later without worrying about losing them. Shopkeepers will also have access
-                to a dashboard where they can keep track of receipts.
+              <p>
+                The app also offers robust budget management features, allowing users to track their expenses and
+                spending habits effectively.
+              </p>
 
-                <br><br>The budget management feature helps users track their expenses and control their spending
-                habits. The app provides real-time feedback on spending habits and offers suggestions for cost-saving
-                measures. Additionally, the app uses data science to automatically deduct expenses from the user's
-                budget, allowing them to keep track of their expenses in real time.
+              <h4>Key Features:</h4>
+              <ul>
+                <li><strong>Generate QR Codes:</strong> EcoReceipts generates QR codes for invoices/receipts,
+                  eliminating the need for paper receipts.</li>
+                <li><strong>Mobile App Integration:</strong> Users can scan QR codes using the mobile app to store bill
+                  details for easy access later.</li>
+                <li><strong>Shopkeeper Dashboard:</strong> Shopkeepers have access to a dashboard to keep track of
+                  receipts generated.</li>
+                <li><strong>Budget Management:</strong> Track expenses and control spending habits with real-time
+                  feedback and cost-saving suggestions.</li>
+                <li><strong>Expense Tracking:</strong> Automatically deduct expenses from the user's budget using data
+                  science, providing real-time expense tracking.</li>
+              </ul>
 
-                <br><br>This system offers a sustainable solution to eliminate paper receipts and provides an efficient
-                way to manage expenses and budget, making it an eco-friendly and practical choice for users.
+              <p>
+                EcoReceipts offers an eco-friendly and practical solution to eliminate paper receipts while efficiently
+                managing expenses and budget, making it an ideal choice for environmentally-conscious users.
+              </p>
+
             </div>
 
           </div>
