--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -103,14 +103,24 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App</li>
-                <li><strong>Client</strong>: Save The Bilby Fund, Australia</li>
-                <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/Save_Bilby">https://github.com/ahmaddioxide/Save_Bilby</a></li>
+                <li><strong>Category</strong>: Android | iOS </li>
+                <li><strong>Technologies</strong>:
+                  <br>
+                  <ul>
+                    <li>Flutter</li>
+                    <li>Dart</li>
+                    <li>Firebase</li>
+                    <li>REST APIs</li>
+                    <li>Firebase Cloud Messaging</li>
+                  </ul>
+                </li>
+
+
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Field Camera Images Categorization App</h2>
+              <h2>Save the Bilby</h2>
               <p>
                 Save the Bilby is a mobile application developed using Flutter that helps categorize field camera images
                 for a conservation organization. The app utilizes Firebase Realtime Database and Firebase Authentication
@@ -119,6 +129,19 @@
                 implemented through Firebase Cloud Messaging, and state management is handled using the getX package.
                 The project also includes an admin page that allows for easy image management, uploading, and user email
                 exports for newsletters.
+              </p>
+
+              <h4>Key Features:</h4>
+              <ul>
+                <li>Utilizes Firebase Realtime Database for storing data.</li>
+                <li>Utilizes Firebase Authentication for user authentication.</li>
+                <li>Stores images in Firebase Firestore.</li>
+                <li>Uses EmailJS API for sending notification emails to users.</li>
+                <li>Implements push notifications through Firebase Cloud Messaging.</li>
+                <li>Manages state using the getX package.</li>
+                <li>Includes an admin page for easy image management, uploading, and user email exports.</li>
+              </ul>
+
             </div>
           </div>
 
