--- a/ShuStore.html
+++ b/ShuStore.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Fellowship App Details</title>
+  <title>PPocket App Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,6 +59,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -93,11 +94,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/FellowshipApp.jpg" alt="">
+                  <img src="assets/img/portfolio/ShuStoreFeatureGraphics.png" alt="">
                 </div>
-
-              
-
 
               </div>
               <div class="swiper-pagination"></div>
@@ -108,11 +106,54 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Platform</strong>: Flutter App & Web Application</li>
+                <li><strong>Name</strong>: Shu Store </li>
+                <li><strong>Platforms</strong>: Android | iOS </li>
+                <li><strong>Technologies</strong>: <ul>
+                    <li>Flutter</li>
+                    <li>Dart</li>
+                    <li>Firebase</li>
+                    <li>REST APIs</li>
+                    <li>Stripe Payment Gateway</li>
+                    <li>CI/CD</li>
+                    <li>Cloud Functions</li>
+                  </ul>
+                </li>
+
+
               </ul>
             </div>
-            <!-- <div class="portfolio-description">
-             
+            <div class="portfolio-description">
+              <h2>Shu Store: Your Ultimate Destination for Shoe Shopping</h2>
+              <p>
+                Experience the ultimate shoe shopping destination connecting you with experts for all your footwear
+                needs.
+                <br>
+              <h4>Key features: </h4>
+              <ul>
+                <li>Explore a diverse collection of shoes and connect with knowledgeable experts for personalized
+                  consultations.
+                </li>
+                <li>Effortlessly manage orders, ensuring secure payments, and leave ratings and reviews to enhance your
+                  shopping experience.</li>
+                <li>Experts can create professional profiles, curate shoe collections, and offer competitive prices and
+                  availability.</li>
+                <li>Foster a user-friendly and secure environment for seamless shoe shopping.</li>
+                <li>Gain valuable insights through comprehensive statistics, tracking order completion rates, and total
+                  spending.</li>
+                <li>Discover shoes effortlessly by browsing categories or searching for specific styles, enhancing your
+                  shopping experience.</li>
+                <li>Efficiently manage orders with features such as viewing all pending, completed, and canceled
+                  purchases.</li>
+                <li>Interact with experts through features like viewing their availability, pricing, and detailed
+                  product information.</li>
+                <li>Enable seamless communication between customers and experts with in-app messaging functionality.
+                </li>
+                <li>Enhance payment management with options to securely save payment details for future purchases and
+                  manage saved cards.</li>
+              </ul>
+
+            </div>
+
           </div>
 
         </div>
