--- a/index.html
+++ b/index.html
@@ -388,6 +388,28 @@
             </ul>
           </div>
         </div> -->
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/BrainBankFeatureGraphics.png" class="img-fluid portfolio-image" alt="">
+              <div class="portfolio-links">
+                <a href="aassets/img/portfolio/BrainBankFeatureGraphics.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Brain Bank"><i class="bx bx-plus"></i></a>
+                <a href="BrainBank.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/ShuStoreFeatureGraphics.png" class="img-fluid portfolio-image" alt="">
+                <div class="portfolio-links">
+                  <a href="aassets/img/portfolio/ShuStoreFeatureGraphics.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Shu Store"><i class="bx bx-plus"></i></a>
+                  <a href="ShuStore.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
