--- a/EmergencyAppDetails.html
+++ b/EmergencyAppDetails.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Emergency App Details</title>
+  <title>Emergency App </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
