--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Group Tea App Details</title>
+  <title>Group Tea App </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
